# website

./: .envrc  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  aidanpinard-co-56015f7ab0fd9dc2.js  aidanpinard-co-56015f7ab0fd9dc2_bg.wasm  aidanpinard-co-5ed2b1d2ef6e48e6.js  astro.config.mjs  build.gradle.kts  flake.nix  gradle.properties  index-34a52eff196f8a16.css  index-65d71c28748609a3.css  index.html  index.scss  input.css  package.json  perseus.nix  rust-toolchain.toml  settings.gradle.kts  shell.nix  tailwind.config.js
.cargo/: config.toml
.direnv/: nix-profile-23.05-714kd9iay1f89hsp  nix-profile-23.05-714kd9iay1f89hsp.rc
.github/workflows/: docker-build-and-push.yml
.helix/: languages.toml
ecng-2001-group-5/: info.txt
etan/: index.html
gradle/wrapper/: gradle-wrapper.properties
src/: app.rs  error_views.rs  main.rs  router.rs  tailwind.config.js
src/components/: CustomSection.astro  Footer.astro  Header.astro  InlineLink.astro  LinkButton.astro  ThemeButton.astro  footer.rs  github_stats.rs  head.rs  header.rs  link.rs  mod.rs  navbar.rs  page_wrapper.rs  spacer.rs  typography.rs
src/components/birthday/: celebrate.rs  customize.rs  mod.rs
src/layouts/: Layout.astro
src/main/kotlin/: Application.kt  Route.kt
src/main/resources/: application.yaml
src/main/resources/assets/: index.css
src/pages/: about.astro  about.rs  birthday.rs  contact.astro  contact.rs  home.rs  index.astro  mod.rs  not_found.rs
src/styles/: global.css
src/templates/: contact.rs  index.rs
src/types/: mod.rs  query_params.rs  url_date.rs
