[package]
name = "aidanpinard-co"
version = "0.1.0"
edition = "2021"
description = "Yew App for aidanpinard.co"
readme = "README.md"
repository = "https://github.com/jeiang/website"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
dark-light = "1.0.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
js-sys = "0.3.60"
log = { version = "0.4.17", features = [ "kv_unstable_serde", "max_level_trace", "release_max_level_warn" ] }
once_cell = "1"
serde = { version = "1.0.152", features = [ "derive" ] }
time = { version = "0.3.17", features = [ "wasm-bindgen", "parsing", "macros" ] }
wasm-logger = "0.2.0"
yew = { version = "0.20", features = [ "csr" ] }
yew-router = "0.17.0"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
