[package]
name = "aidanpinard-co"
version = "0.1.0"
edition = "2021"
description = "Website for aidanpinard.co"
readme = "README.md"
repository = "https://github.com/jeiang/website"
license = "MIT OR Apache-2.0"
keywords = ["perseus"]
categories = ["gui", "wasm", "web-programming"]

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.2", features = [ "hydrate" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

# Engine-only dependencies go here
[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-axum = { version = "=0.4.2", features = [ "dflt-server" ] }

# Browser-only dependencies go here
[target.'cfg(client)'.dependencies]