[package]
name = "website"
version = "0.2.0"
edition = "2021"
license = "MIT or Apache-2.0"
categories = ["web-programming"]
keywords = ["web", "framework", "rust"]
description = "Aidan's personal website"
readme = "README.md"
repository = "https://github.com/jeiang/website"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
